2006-10-19  Stefan Monnier  <monnier@iro.umontreal.ca>

	* inf-haskell.el (inferior-haskell-load-file): Simplify and make more
	robust at the same time.

	* haskell-doc.el: Drop p-c-idle-h in favor of run-with-idle-timer.
	(haskell-doc-timer, haskell-doc-buffers): New vars.
	(haskell-doc-mode): Use them.
	(haskell-doc-check-active): Update the check.
	(haskell-doc-mode-print-current-symbol-info): Don't sit-for unless it's
	really needed.  Remove the interactive spec.

2006-09-25  Stefan Monnier  <monnier@iro.umontreal.ca>

	* haskell-mode.el (haskell-mode-menu): Fix typo.

2006-09-20  Stefan Monnier  <monnier@iro.umontreal.ca>

	* haskell-font-lock.el (haskell-font-lock-keywords-create): Use a more
	precise test for literate haskell highlighting.

	* haskell-mode.el (haskell-mode-menu): New menu.
	(haskell-mode): Use new name `eldoc-documentation-function'.

2006-05-18  Stefan Monnier  <monnier@iro.umontreal.ca>

	* inf-haskell.el (inferior-haskell-wait-for-prompt): New fun, extracted
	from inferior-haskell-send-command.
	(inferior-haskell-send-command): Use it.
	(inferior-haskell-wait-and-jump): New custom var.
	(inferior-haskell-load-file): Use it.

2006-05-17  Stefan Monnier  <monnier@iro.umontreal.ca>

	* inf-haskell.el (inferior-haskell-mode): Use shell-dirtrack-mode
	if possible.

	* haskell-hugs.el (haskell-hugs-start-process):
	* haskell-ghci.el (haskell-ghci-start-process):
	Use comint-input-filter-functions rather than the outdated
	comint-input-sentinel.  Reported by Jerry James <james@xemacs.org>.

2005-12-09  Stefan Monnier  <monnier@iro.umontreal.ca>

	* indent.hs: Add some erroneous cases.

	* haskell-font-lock.el (haskell-font-lock-keywords-create):
	Minor regexp fiddling.

2005-11-23  Stefan Monnier  <monnier@iro.umontreal.ca>

	* haskell-indent.el (haskell-indent-next-symbol): Simplify.
	(haskell-indent-comment): Rename from haskell-indent-inside-comment.
	(haskell-indent-skip-lexeme-forward)